--- a/css/custom.css
+++ b/css/custom.css
@@ -478,6 +478,15 @@ li.list-item-3{
   .feature .btn-info{
     line-height:1.3;
   }
+
+  ul.form-list p{
+    margin-top: 2%;
+    line-height: 1.6;
+  }
+
+  ul.form-list span{
+    line-height: 0.2;
+  }
 }
 
 
