--- a/css/custom.css
+++ b/css/custom.css
@@ -659,3 +659,7 @@ ul.bonus-align{
     width: 100%;
   }
 }
+
+.section-experience__body{
+  background-image:url("https://www.howtogettheguy.com/site/wp-content/uploads/2022/10/experience-bg.jpg");
+}
