--- a/css/custom.css
+++ b/css/custom.css
@@ -313,6 +313,10 @@ html {
   line-height: 1.6;
 }
 
+.d-none{
+  display: flex !important;
+}
+
 }
 
 /* HERO SECTION */
@@ -324,12 +328,21 @@ html {
   border-radius: 0;
 }
 
+.hero__cta-wrapper{
+  border: 5px dashed #ff3247 !important;
+  width: 60% !important;
+  margin: auto !important;
+  text-align: left !important;
+  margin-bottom: 5% !important;
+}
+
 /* MOBILE RESPONSIVENESS */
 
 @media(max-width:767px){
 
   .hero__cta-wrapper{
     border: 3px dashed #ff3247;
+    width: 100% !important;
   }
 
 }
@@ -337,19 +350,24 @@ html {
 /* FEATURE SECTION */
 /* styles for feature section new items */
 
-ul.form-list{
-text-align: left;
-}
-
 ul.form-list span{
-  font-weight:800;
-  font-size:1.2rem;
+   font-weight:800 !important;
+  font-size:1.25rem !important;
 }
 
+span.why-under{
+  text-decoration: underline rgb(255, 50, 71);
+}
+
+ul.form-list p{
+  font-size:1.05rem !important;
+}
+
+
 ul.form-list{
-  margin-right: 5%;
-  margin-left: 5%;
-  margin-top: 0.5%;
+  margin-right: 10% !important;
+  margin-left: 10% !important;
+  margin-top: 0.5% !important;
 }
 
 li.list-item-1{
@@ -479,7 +497,8 @@ li.list-item-3{
   }
 
   ul.form-list span{
-    line-height: 0.2;
+    line-height: 1.3;
+    font-size: 20px;
   }
 }
 
@@ -501,9 +520,9 @@ section#testimonials-backup{
 }
 
 section#testimonials-backup img{
-  width: 45%;
-  margin-left: -18.5%;
-  margin-top: -15%;
+  width: 50%;
+  margin-left: -24.5%;
+  margin-top: -24%;
 }
 
 section#testimonials-backup .section-testimonials__item--left{
@@ -523,23 +542,24 @@ section#testimonials-backup2{
 
 section#testimonials-backup2 .section-testimonials__item--left{
   padding-bottom: 0;
-  background-color: #fff;
+  background-color: transparent;
   border: 5px dashed #04273c;
-  color:#04273c;
+  color:#fff;
   padding-top: 60px;
 }
 
 section#testimonials-backup2 .section-testimonials__item--right{
   padding-bottom: 0;
-  background-color: #fff;
+  background-color: transparent;
   border: 5px dashed #ff3247;
-  color:#04273c;
+  color:#fff;
   padding-top: 60px;
 }
 
 section#testimonials-backup2 img{
-  width: 40%;
-  margin-left: -1%;
+  width: 50%;
+  margin-left: -28%;
+  margin-top: -23%;
 }
 
 section#testimonials-backup2 .section-testimonials__item--right strong{
@@ -577,6 +597,13 @@ section#testimonials-backup2 .section-testimonials__item--left strong{
     margin-left: -21.5% !important;
     margin-top: -15% !important;
   }
+
+  section#testimonials-backup2 img{
+    width: 55%;
+    margin-left: -28%;
+    margin-top: -26%;
+  }
+
 }
 
 /* MOBILE RESPONSIVENESS */
@@ -584,6 +611,12 @@ section#testimonials-backup2 .section-testimonials__item--left strong{
 @media(max-width:767px){
   .hero__bonus2 {
     font-size: 1.3rem;
+  }
+
+  section#testimonials-backup2 img{
+    width: 80%;
+    margin-left: -20%;
+    margin-top: -29%;
   }
 }
 
@@ -824,8 +857,8 @@ span.color{
   
   section#testimonials-backup img{
     width: 60% !important;
-    margin-left: -14% !important;
-    margin-top: -4%;
+    margin-left: -20% !important;
+    margin-top: -17%;
   }
   
   section#testimonials-backup2 img{
@@ -861,8 +894,8 @@ span.color{
 
   section#testimonials-backup img{
     width: 60% !important;
-    margin-left: -12.5% !important;
-    margin-top: -4%;
+    margin-left: -18.5% !important;
+    margin-top: -18%;
   }
 
 }
@@ -871,8 +904,8 @@ span.color{
 
   section#testimonials-backup img{
     width: 60% !important;
-    margin-left: -16.5% !important;
-    margin-top: -4%;
+    margin-left: -22.5% !important;
+    margin-top: -21%;
   }
 
   section#testimonials-backup-bonus img {
