--- a/css/custom.css
+++ b/css/custom.css
@@ -468,7 +468,7 @@ li.list-item-3{
   }
 
   ul.form-list li{
-    font-size: 1.05rem!important;
+    font-size: 1rem!important;
   }
 
   li.list-item-1{
@@ -476,15 +476,15 @@ li.list-item-3{
   }
 
   li.list-item-2{
-    margin-top: 8% !important;
+    margin-top: 10% !important;
   }
 
   li.list-item-3{
-    margin-top: 8% !important;
+    margin-top: 10% !important;
   }
 
   .hero__bonus {
-    font-size: 1.3  rem;
+    font-size: 1.2rem !important;
   }
 
   .feature .btn-info{
@@ -616,8 +616,18 @@ section#testimonials-backup2 .section-testimonials__item--left strong{
   section#testimonials-backup2 img{
     width: 80%;
     margin-left: -20%;
-    margin-top: -29%;
+    margin-top: -43%;
   }
+
+  section#testimonials-backup2 .section-testimonials__item--left strong{
+    margin-top: -12% !important;
+    font-size: 1.6rem;
+  }
+  section#testimonials-backup2 .section-testimonials__item--right strong{
+    margin-top: -12% !important;
+    font-size: 1.6rem;
+  }
+
 }
 
 
@@ -673,6 +683,12 @@ span.highlight-underline{
 @media(max-width:767px){
   .step .btn--step{
     line-height:1.3;
+  }
+
+  .hero__bonus5 {
+    font-size: 1.2rem !important;
+    margin-top: -12.5% !important;
+    margin-bottom: 10% !important;
   }
 }
 
@@ -858,7 +874,7 @@ span.color{
   section#testimonials-backup img{
     width: 60% !important;
     margin-left: -20% !important;
-    margin-top: -17%;
+    margin-top: -20%;
   }
   
   section#testimonials-backup2 img{
@@ -867,12 +883,13 @@ span.color{
   
   h1.inline-list-limited{
     font-size: 20px !important;
-    line-height:1 !important;
+    line-height: 1.2 !important;
     font-weight: 600 !important;
   }
 
   h1.bonus-highlight-2{
     font-size: 22px !important;
+    margin-top: -3% !important;
   }
 
   p.bonus-sub-2{
